378780514943/Games1/templates/deployment-app-test-ecr1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-test-ecr1
  labels:
    app.kubernetes.io/name: app-test-ecr1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Games1
    cloudman.io/user: rmay-struct
  namespace: gamestest1
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      serviceAccountName: deployment-app-test-ecr1-v1-sa
      containers:
        - image: "262578989263.dkr.ecr.us-east-1.amazonaws.com/repo-k8hub:v3"
          imagePullPolicy: IfNotPresent
          name: games-web
          stdin: false
          stdinOnce: false
          tty: false
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
    metadata:
      labels:
        app.kubernetes.io/name: app-test-ecr1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-test-ecr1
