378780514943/Games1/templates/service-app-test-ecr1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-test-ecr1-svc
  namespace: gamestest1
  labels:
    app.kubernetes.io/name: app-test-ecr1-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Games1
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - name: http-80
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: app-test-ecr1
