378780514943/Games1/templates/httproute-games1-app-test-ecr1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: games1-app-test-ecr1
  namespace: gamestest1
  labels:
    struct8.io/origin: games1
    app.kubernetes.io/name: games1-app-test-ecr1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Games1
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi1
      namespace: infra1
      sectionName: g-api1
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: app-test-ecr1-svc
          namespace: gamestest1
          port: 80
  hostnames:
    - games.k8s.admin.billingpay.com.br
