378780514943/Games1/templates/networkpolicy-allow-gateway-to-app-test-ecr1-80.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-to-app-test-ecr1-80
  namespace: gamestest1
  labels:
    app.kubernetes.io/name: allow-gateway-to-app-test-ecr1-80
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Games1
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: app-test-ecr1
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: infra1
      ports:
        - protocol: TCP
          port: 80
